objects/Invoice_Payment__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Summe</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CREATEDDATE_old__c</fullName>
        <description>original creation date</description>
        <label>CREATEDDATE_old</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DATE_old_del__c</fullName>
        <description>old creation date</description>
        <label>DATE_old</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Datum</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>Rechnung</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Zahlungseingänge</relationshipLabel>
        <relationshipName>Invoice_Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <label>Methode</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Payment_Methods</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Old_Zahlungseingang_ID__c</fullName>
        <label>Old Zahlungseingang ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <formula>Invoice__r.Opportunity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <formula>Invoice__r.Opportunity__r.Test__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaktion</label>
        <referenceTo>Transaction__c</referenceTo>
        <relationshipLabel>Zahlungseingänge (Rechnung)</relationshipLabel>
        <relationshipName>Invoice_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ZahleingImpID__c</fullName>
        <description>Import ID</description>
        <externalId>true</externalId>
        <label>ZahleingImpID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Zahlungseingang</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Invoice Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zahlungseingänge</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>